--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_weight="2">
+        android:layout_height="fill_parent"
+        android:layout_weight="0.7">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -23,7 +24,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_weight="0.5">
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
 
 
         <ImageButton
@@ -39,7 +41,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="0.95"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal">
 
 
@@ -56,14 +59,14 @@
             android:layout_weight="1"
             android:background="@drawable/welcome_grid"
             android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:paddingStart="8dp" />
+            android:layout_marginRight="50dp"/>
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.95"
         android:layout_gravity="center_horizontal">
 
         <EditText
@@ -80,15 +83,18 @@
             android:background="@drawable/welcome_grid"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:paddingStart="8dp"
             android:password="false" />
 
         </LinearLayout>
 
+
+
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_weight="1.5"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.8"
         android:layout_gravity="center_vertical">
 
         <ImageButton
