--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -59,7 +59,8 @@
             android:layout_weight="1"
             android:background="@drawable/welcome_grid"
             android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"/>
+            android:layout_marginRight="50dp"
+            android:paddingStart="8dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -83,7 +84,8 @@
             android:background="@drawable/welcome_grid"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:password="false" />
+            android:password="false"
+            android:paddingStart="8dp" />
 
         </LinearLayout>
 
