--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -50,7 +50,7 @@
                         android:layout_marginTop="20dp"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Name"
-                        android:id="@+id/textView3"
+                        android:id="@+id/activity_name"
                         android:layout_marginLeft="10dp" />
 
                     <TextView
@@ -58,7 +58,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Destination"
-                        android:id="@+id/textView4"
+                        android:id="@+id/activity_destination"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="20dp" />
 
@@ -67,7 +67,7 @@
                         android:layout_height="50dp"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Departure Location"
-                        android:id="@+id/textView5"
+                        android:id="@+id/activity_depature_location"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="20dp" />
 
@@ -76,7 +76,7 @@
                         android:layout_height="50dp"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Departure Time"
-                        android:id="@+id/textView6"
+                        android:id="@+id/activity_depature_time"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="20dp" />
 
@@ -85,7 +85,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Remark"
-                        android:id="@+id/textView7"
+                        android:id="@+id/activity_remark"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="20dp" />
                 </LinearLayout>
@@ -99,8 +99,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView8"
+                        android:text="waiting for data..."
+                        android:id="@+id/fill_activity_name"
                         android:layout_marginTop="20dp"
                         android:textColor="#ff190f93" />
 
@@ -108,8 +108,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView9"
+                        android:text="waiting for data..."
+                        android:id="@+id/fill_activity_destination"
                         android:layout_marginTop="20dp"
                         android:textColor="#ff190f93" />
 
@@ -117,8 +117,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView10"
+                        android:text="waiting for data..."
+                        android:id="@+id/fill_activity_depature_location"
                         android:layout_marginTop="20dp"
                         android:textColor="#ff190f93" />
 
@@ -126,8 +126,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView11"
+                        android:text="waiting for data..."
+                        android:id="@+id/fill_activity_depature_time"
                         android:layout_marginTop="20dp"
                         android:textColor="#ff190f93" />
 
@@ -135,8 +135,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/textView12"
+                        android:text="waiting for data..."
+                        android:id="@+id/fill_activity_remark"
                         android:layout_marginTop="20dp"
                         android:textColor="#ff190f93" />
                 </LinearLayout>
