--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -57,6 +57,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Title"
+                        android:id="@+id/activity_title"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="20dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Destination"
                         android:id="@+id/activity_destination"
                         android:layout_marginLeft="10dp"
@@ -84,7 +93,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Remark"
+                        android:text="Description"
                         android:id="@+id/activity_remark"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="20dp" />
@@ -101,6 +110,15 @@
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="waiting for data..."
                         android:id="@+id/fill_activity_name"
+                        android:layout_marginTop="20dp"
+                        android:textColor="#ff190f93" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="waiting for data..."
+                        android:id="@+id/fill_activity_title"
                         android:layout_marginTop="20dp"
                         android:textColor="#ff190f93" />
 
