--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -17,9 +17,10 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/textView"
+        android:id="@+id/list_activity_title"
         android:layout_toRightOf="@+id/imageView"
         android:layout_alignTop="@+id/imageView"
+        android:layout_below="@+id/imageView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -28,8 +29,28 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+        android:id="@+id/list_activity_name"
+        android:layout_below="@+id/list_activity_title"
+        android:layout_alignLeft="@+id/list_activity_title"
+        android:layout_alignStart="@+id/list_activity_title" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="23dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/list_activity_destination"
+        android:layout_below="@+id/list_activity_title"
+        android:layout_toEndOf="@+id/list_activity_name" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/list_activity_time"
+        android:layout_below="@+id/list_activity_title"
+        android:layout_toEndOf="@+id/list_activity_destination"
+        android:layout_marginLeft="23dp" />
 </RelativeLayout>
