--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -141,6 +141,7 @@
                 android:layout_weight="1"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:prompt="@string/category_label"
                 android:clickable="false"
                 android:spinnerMode="dropdown"
                 android:entries="@array/signup_gender_array"/>
