--- a/app/src/main/res/layout/notification_single_row.xml
+++ b/app/src/main/res/layout/notification_single_row.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:clickable="false">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="83dp">
+        android:layout_height="83dp"
+        android:clickable="true">
 
         <ImageView
             android:src="@drawable/moon"
@@ -79,23 +81,27 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true">
 
-            <ImageButton
+            <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/check_button"
                 android:id="@+id/imageButton4"
                 android:scaleType="fitCenter"
                 android:background="#00000000"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:layout_alignTop="@+id/list_activity_title"
                 android:layout_alignBottom="@+id/list_activity_time"
                 android:layout_marginTop="20dp" />
 
-            <ImageButton
+            <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/button_cross"
                 android:scaleType="fitCenter"
                 android:id="@+id/imageButton5"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignBottom="@+id/imageButton4"
@@ -105,4 +111,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
