--- a/app/src/main/res/layout/notifications.xml
+++ b/app/src/main/res/layout/notifications.xml
@@ -49,7 +49,8 @@
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/listView3" />
+            android:id="@+id/listView3"
+            android:clickable="false" />
     </LinearLayout>
 
 
