--- a/app/src/main/res/layout/notification_single_row.xml
+++ b/app/src/main/res/layout/notification_single_row.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:clickable="false">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="83dp"
-        android:clickable="true">
+    <!--<LinearLayout-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="83dp"-->
+        <!--android:clickable="true">-->
 
         <ImageView
             android:src="@drawable/moon"
@@ -19,67 +19,67 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="172dp"
-            android:layout_height="fill_parent">
+        <!--<LinearLayout-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_width="172dp"-->
+            <!--android:layout_height="fill_parent">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
-                android:id="@+id/list_activity_title"
-                android:layout_toRightOf="@+id/imageView"
-                android:layout_alignTop="@+id/imageView"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+                <!--android:text="Large Text"-->
+                <!--android:id="@+id/list_activity_title"-->
+                <!--android:layout_toRightOf="@+id/imageView"-->
+                <!--android:layout_alignTop="@+id/imageView"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_alignParentEnd="true" />-->
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="27dp"
-                android:layout_marginTop="5dp">
+            <!--<LinearLayout-->
+                <!--android:orientation="horizontal"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="27dp"-->
+                <!--android:layout_marginTop="5dp">-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
-                    android:id="@+id/list_activity_name"
-                    android:layout_below="@+id/list_activity_title"
-                    android:layout_alignLeft="@+id/list_activity_title"
-                    android:layout_alignStart="@+id/list_activity_title" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+                    <!--android:text="Small Text"-->
+                    <!--android:id="@+id/list_activity_name"-->
+                    <!--android:layout_below="@+id/list_activity_title"-->
+                    <!--android:layout_alignLeft="@+id/list_activity_title"-->
+                    <!--android:layout_alignStart="@+id/list_activity_title" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="23dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
-                    android:id="@+id/list_activity_destination"
-                    android:layout_below="@+id/list_activity_title"
-                    android:layout_toEndOf="@+id/list_activity_name" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="23dp"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+                    <!--android:text="Small Text"-->
+                    <!--android:id="@+id/list_activity_destination"-->
+                    <!--android:layout_below="@+id/list_activity_title"-->
+                    <!--android:layout_toEndOf="@+id/list_activity_name" />-->
 
-            </LinearLayout>
+            <!--</LinearLayout>-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
-                android:id="@+id/list_activity_time"
-                android:layout_alignBottom="@+id/imageView"
-                android:layout_toStartOf="@+id/list_activity_destination" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+                <!--android:text="Small Text"-->
+                <!--android:id="@+id/list_activity_time"-->
+                <!--android:layout_alignBottom="@+id/imageView"-->
+                <!--android:layout_toStartOf="@+id/list_activity_destination" />-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
+        <!--<LinearLayout-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_alignParentStart="true">-->
 
             <ImageView
                 android:layout_width="40dp"
@@ -108,7 +108,7 @@
                 android:background="#00000000"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp" />
-        </LinearLayout>
-    </LinearLayout>
+        <!--</LinearLayout>-->
+    <!--</LinearLayout>-->
 
 </RelativeLayout>
